# graph-analytics-starter-pack

./: .gitignore  README.md
COMP9312/: README.md
COMP9312/GNN-slides/: Topic 5 Traditional Methods on Graphs.pptx  Topic 6- Node Embeddings.pptx  Topic 7.2 Graph Neural Networks Models - p2.pptx  Topic 8 - Message Passing and Node Classification.pptx  Topic 9 - Graph Features.pptx  gcn.py
COMP9312/GNN-slides/draft/: w8-1 1_Topic 9 - Graph Neural Networks Models - p2 popular frameworks.pptx  w8-1-2 2_Topic 5 - -cnn.pptx  w8-1-3 4_Topic 10 - RGCN.pptx  w8-2-1 2_Topic 8 - early Message Passing and semi sup  - p1 intro.pptx  (+3 more)
GPU/: README.md
GPU/tutorial/tc/: CMakeLists.txt
GPU/tutorial/tc/src/graph/: graph.cpp  graph.h
notes/Anomaly Detection on Attributed Networks viaContrastive Self-Supervised Learning/: note.md
notes/DeepWalk- Online Learning of Social Representations/: DeepWalk-Online Learning of Social Representations.md
notes/GAT/: GAT.md
notes/ROTATE- KNOWLEDGEGRAPHEMBEDDING BY RELA-TIONALROTATION  INCOMPLEXSPACE/: ROTATE- KNOWLEDGEGRAPHEMBEDDING BYRELA-TIONALROTATION  INCOMPLEXSPACE.md
notes/Semi-Supervised Classification with Graph Convolutional Networks/: Semi-Supervised Classification with Graph Convolutional Networks.md
notes/node2vec/: node2vec.md
sections/CohesiveSubgraph/: README.md
sections/DifferentialPrivacy/: README.md
sections/GPU/: README.md
sections/LLM/: README.md
tutorials/: Tutorial5_inclasscode.ipynb  Tutorial7_Downstream_Applications_Template.ipynb  tutorial6_Node_Embedding.ipynb  tutorial_8.ipynb
(+7 files in other folders)
